# l9

2024-1/: CMakeLists.txt  main.cpp
2024-1/src/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  Cliente.hpp  Fecha.hpp  Libro.hpp  Utils.hpp  Venta.hpp
Lab09 25-1/: CMakeLists.txt  main.cpp
Lab09 25-1/Bibliotecas/: EmpresasRegistradas.h  Fecha.h  InfraccionCometida.h  TablaDeInfracciones.h  funciones.cpp  funciones.h
TP_SOL_LAB09_2025_1/: CMakeLists.txt  main.cpp
TP_SOL_LAB09_2025_1/MiBiblioteca/: Empresa.h  Fecha.h  FuncionesAux.cpp  FuncionesAux.h  InfoDeInfraccion.h  InfoInfraccionCometida.h
